[gd_scene load_steps=7 format=3 uid="uid://c5e53p0d4ukws"]

[ext_resource type="Script" uid="uid://d3ft73jvs7l6x" path="res://scene/pause/pause_menu.gd" id="1_avy3h"]
[ext_resource type="Shader" uid="uid://cr6s0pm5ln5a" path="res://scene/pause/gdshader.gdshader" id="1_fo2g5"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_avy3h"]
shader = ExtResource("1_fo2g5")
shader_parameter/lod = 0.0

[sub_resource type="Animation" id="Animation_qok3e"]
length = 0.001

[sub_resource type="Animation" id="Animation_is3o6"]
resource_name = "blur"
length = 0.3

[sub_resource type="AnimationLibrary" id="AnimationLibrary_45db5"]
_data = {
&"RESET": SubResource("Animation_qok3e"),
&"blur": SubResource("Animation_is3o6")
}

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_avy3h")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_avy3h")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -59.0
offset_top = -176.0
offset_right = 125.0
offset_bottom = 59.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 25

[node name="btnResum" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Resume
"

[node name="Restart" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Restart"

[node name="Exit" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Exit
"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_45db5")
}

[connection signal="pressed" from="PanelContainer/VBoxContainer/btnResum" to="." method="_on_btn_resum_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
